--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -63,6 +63,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-plane - write about new textures section examples
 
 <!-- VIDEO 2 for threejs-plane -->
+* (done) have a loop section started with a video1 example
 * () have a loop section example for video2
 * () use data textures
 * () mutate position attribute
