--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -52,7 +52,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * () start post #1009 on threejs-
 
 
-
+* () edit: threejs-plane - write about new loop section
 
 ### () - THU 10/12/2022
 * (done) forpost: threejs-plane - create for post folder
@@ -64,10 +64,9 @@ Other tasks should be limited and only done after I put at least a little time i
 
 <!-- VIDEO 2 for threejs-plane -->
 * (done) have a loop section started with a video1 example
-* () have a loop section example for video2
-* () use data textures
-* () mutate position attribute
-* () videoground-blog-posts: start video2 for threejs-plane
+* (done) have a loop section example for video2
+* (done) use data textures
+* (done) videoground-blog-posts: start video2 for threejs-plane
 * () edit: threejs-plane - embed video2
 
 <!-- for post folder for fridays post -->
