--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,8 +49,9 @@ Other tasks should be limited and only done after I put at least a little time i
 * () hexo-sitesource: at least have a new static background
 
 ### () - FRI 10/13/2022
-* () start post #1009 on threejs-
-
+* () r140 demo for a canvas-text-plane
+* () forpost folder for threejs-examples-canvas-text-plane
+* () start post #1009 on threejs-examples-canvas-text-plane
 
 * () edit: threejs-plane - write about new loop section
 
