--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -49,11 +49,15 @@ Other tasks should be limited and only done after I put at least a little time i
 * () hexo-sitesource: at least have a new static background
 
 ### () - FRI 10/13/2022
-* () r140 demo for a canvas-text-plane
-* () forpost folder for threejs-examples-canvas-text-plane
+* (done) forpost: threejs-canvas-texture - finish r1 of module and expand demos
+
+* () forpost folder for threejs-examples-canvas-text-plane starting with what I worked out for threejs-canvas-texture
 * () start post #1009 on threejs-examples-canvas-text-plane
 
 * () edit: threejs-plane - write about new loop section
+* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
+
+* () videoground-blog-posts : threejs-examples-canvas-text-plane
 
 ### () - THU 10/12/2022
 * (done) forpost: threejs-plane - create for post folder
