--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -53,10 +53,12 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) forpost folder for threejs-examples-canvas-text-plane starting with what I worked out for threejs-canvas-texture
 * (done) start post #1009 on threejs-examples-canvas-text-plane
 
+* () edit: threejs-examples - like to new post threejs-examples-canvas-text-plane
 * () finish r0 and first demo
-* () edit: threejs-examples-canvas-text-plane - to reflect r0 and current demos
+* () edit: threejs-examples-text-plane - to reflect r0 and current demos
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
-* () edit: threejs-examples-canvas-text-plane - embed video
+* () edit: threejs-examples-text-plane - embed video
+
 
 
 * () edit: threejs-plane - write about new loop section
