--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -53,8 +53,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) forpost folder for threejs-examples-canvas-text-plane starting with what I worked out for threejs-canvas-texture
 * (done) start post #1009 on threejs-examples-canvas-text-plane
 * (done) forpost: threejs-examples-canvas-text-plane - finish r0 and first demo
-
-* () edit: threejs-examples - link to new post threejs-examples-canvas-text-plane
+* (done) edit: threejs-examples - link to new post threejs-examples-canvas-text-plane
 
 * () edit: threejs-examples-text-plane - to reflect r0 and current demos
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
