--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,14 +39,18 @@ Other tasks should be limited and only done after I put at least a little time i
 
 ### () - SAT 10/14/2022
 
+* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
+
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
 * () forpost: threejs-plane - new attributes section
 * () edit: threejs-plane - write about new attributes section examples
+* () edit: threejs-plane - write about new loop section
 
 <!-- misc -->
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 * () videoground: get at least something done with r6
 * () hexo-sitesource: at least have a new static background
+* () build and publish
 
 ### () - FRI 10/13/2022
 * (done) forpost: threejs-canvas-texture - finish r1 of module and expand demos
@@ -54,15 +58,14 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) start post #1009 on threejs-examples-canvas-text-plane
 * (done) forpost: threejs-examples-canvas-text-plane - finish r0 and first demo
 * (done) edit: threejs-examples - link to new post threejs-examples-canvas-text-plane
+* (done) edit: threejs-examples-text-plane - to reflect r0 and current demos in terms of helper functions
 
-* () edit: threejs-examples-text-plane - to reflect r0 and current demos
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
+* () edit: threejs-examples-text-plane - write about public api methods
+* () edit: threejs-examples-text-plane - write more about the first demo
+* () edit: threejs-examples-text-plane - write more about the canvas module
 
-
-
-* () edit: threejs-plane - write about new loop section
-* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
 
 
 ### () - THU 10/12/2022
@@ -72,21 +75,11 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-plane - update basic section with new examples
 * (done) forpost: threejs-plane - new textures section
 * (done) edit: threejs-plane - write about new textures section examples
-
-<!-- VIDEO 2 for threejs-plane -->
 * (done) have a loop section started with a video1 example
 * (done) have a loop section example for video2
 * (done) use data textures
 * (done) videoground-blog-posts: start video2 for threejs-plane
-* () edit: threejs-plane - embed video2
-
-<!-- for post folder for fridays post -->
-* () forpost: start prototype for Fridays post
-
-<!-- canvas texture post -->
-* () forpost: threejs-canvas-texture - continue work on new module section
-* () edit: threejs-canvas-texture - write about new canvasjs module
-
+* (done) edit: threejs-plane - embed video2
 
 ### () - WED 10/11/2022
 * (done) forpost: threejs-object3d-get-world-position - one new loop section example
