--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -38,6 +38,15 @@ Other tasks should be limited and only done after I put at least a little time i
     * edit other posts that are on the top ten, or relevant to them
 
 ### () - SAT 10/14/2022
+* (done) edit: threejs-examples-text-plane - write about public api methods
+* () edit: threejs-examples-text-plane - write more about the first demo
+* () edit: threejs-examples-text-plane - write more about the canvas module
+* () edit: threejs-examples-text-plane - expand opening
+
+* () videoground-blog-posts : threejs-examples-canvas-text-plane
+* () edit: threejs-examples-text-plane - embed video
+
+
 
 * () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
 
@@ -59,14 +68,6 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) forpost: threejs-examples-canvas-text-plane - finish r0 and first demo
 * (done) edit: threejs-examples - link to new post threejs-examples-canvas-text-plane
 * (done) edit: threejs-examples-text-plane - to reflect r0 and current demos in terms of helper functions
-
-* () videoground-blog-posts : threejs-examples-canvas-text-plane
-* () edit: threejs-examples-text-plane - embed video
-* () edit: threejs-examples-text-plane - write about public api methods
-* () edit: threejs-examples-text-plane - write more about the first demo
-* () edit: threejs-examples-text-plane - write more about the canvas module
-
-
 
 ### () - THU 10/12/2022
 * (done) forpost: threejs-plane - create for post folder
