--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,7 +39,7 @@ Other tasks should be limited and only done after I put at least a little time i
 
 ### () - SAT 10/14/2022
 * (done) edit: threejs-examples-text-plane - write about public api methods
-* () edit: threejs-examples-text-plane - write more about the first demo
+* (done) edit: threejs-examples-text-plane - write more about the first demo
 * () edit: threejs-examples-text-plane - write more about the canvas module
 * () edit: threejs-examples-text-plane - expand opening
 
