--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -40,8 +40,8 @@ Other tasks should be limited and only done after I put at least a little time i
 ### () - SAT 10/14/2022
 * (done) edit: threejs-examples-text-plane - write about public api methods
 * (done) edit: threejs-examples-text-plane - write more about the first demo
-* () edit: threejs-examples-text-plane - write more about the canvas module
-* () edit: threejs-examples-text-plane - expand opening
+* (done) edit: threejs-examples-text-plane - write more about the canvas module
+* (done) edit: threejs-examples-text-plane - expand opening
 
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
