--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,6 +43,8 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-examples-text-plane - write more about the canvas module
 * (done) edit: threejs-examples-text-plane - expand opening
 
+* () edit: threejs-examples-text-plane - create new r0-example and write about it
+
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
 
