--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,8 +42,10 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-examples-text-plane - write more about the first demo
 * (done) edit: threejs-examples-text-plane - write more about the canvas module
 * (done) edit: threejs-examples-text-plane - expand opening
+* (done) edit: threejs-examples-text-plane - create new r0 example on using a sphere
 
-* () edit: threejs-examples-text-plane - create new r0-example and write about it
+* () edit: threejs-examples-text-plane - create new r0 example using custom draw method
+* () edit: threejs-examples-text-plane - create new r0 example on position attribute
 
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
