--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -23,7 +23,42 @@ POST                                                        CLICKS  IMPRESSIONS
 * () update youtube github video links from threejs-examples-house forward
 
 
-## () - WEEK 3 - SUN 10/09/2022 to SAT 10/14/2022
+## () - WEEK 4 - SUN 10/16/2022 to SAT 10/22/2022
+TOPTEN: This week the top 10 post to look at is the one on the object3d look at method.
+NEWPOST: This week I would like to work on an idea for making a system for creating VEctor3 data to use with an improved seqhooks mod
+
+### () - SAT 10/22/2022
+
+### () - FRI 10/21/2022
+* () start post #1010 on threejs-examples-
+
+### () - THU 10/20/2022
+
+### () - WED 10/19/2022
+
+### () - TUE 10/18/2022
+
+### () - MON 10/17/2022
+
+### () - SUN 10/16/2022
+<!-- text Plane -->
+* () edit: threejs-examples-text-plane - create new r0 example on position attribute
+* () videoground-blog-posts : threejs-examples-canvas-text-plane
+* () edit: threejs-examples-text-plane - embed video
+<!-- Finish up with canvas texture -->
+* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
+<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
+* () forpost: threejs-plane - new attributes section
+* () edit: threejs-plane - write about new attributes section examples
+* () edit: threejs-plane - write about new loop section
+<!-- misc -->
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+
+
+## () - WEEK 3 - SUN 10/09/2022 to SAT 10/15/2022
 
 I will want to try to keep the focus on editing one of the top ten posts per week. At this time that would mean my post on canvas textures. There is also as always what I will be writing about for my new post on Friday. I would like to try to not let to much more pull my attention away from those two things this week.
 
@@ -37,7 +72,7 @@ Other tasks should be limited and only done after I put at least a little time i
     * work at least a little more on the header app idea
     * edit other posts that are on the top ten, or relevant to them
 
-### () - SAT 10/14/2022
+### () - SAT 10/15/2022
 * (done) edit: threejs-examples-text-plane - write about public api methods
 * (done) edit: threejs-examples-text-plane - write more about the first demo
 * (done) edit: threejs-examples-text-plane - write more about the canvas module
@@ -45,27 +80,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-examples-text-plane - create new r0 example on using a sphere
 * (done) edit: threejs-examples-text-plane - create new r0 example using custom draw method
 
-* () edit: threejs-examples-text-plane - create new r0 example on position attribute
-
-* () videoground-blog-posts : threejs-examples-canvas-text-plane
-* () edit: threejs-examples-text-plane - embed video
-
-
-
-* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
-
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new attributes section
-* () edit: threejs-plane - write about new attributes section examples
-* () edit: threejs-plane - write about new loop section
-
-<!-- misc -->
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
-* () hexo-sitesource: at least have a new static background
-* () build and publish
-
-### () - FRI 10/13/2022
+### () - FRI 10/14/2022
 * (done) forpost: threejs-canvas-texture - finish r1 of module and expand demos
 * (done) forpost folder for threejs-examples-canvas-text-plane starting with what I worked out for threejs-canvas-texture
 * (done) start post #1009 on threejs-examples-canvas-text-plane
@@ -73,7 +88,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-examples - link to new post threejs-examples-canvas-text-plane
 * (done) edit: threejs-examples-text-plane - to reflect r0 and current demos in terms of helper functions
 
-### () - THU 10/12/2022
+### () - THU 10/13/2022
 * (done) forpost: threejs-plane - create for post folder
 * (done) edit threejs-plane - github section
 * (done) forpost: threejs-plane - expand basic section
@@ -86,7 +101,7 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) videoground-blog-posts: start video2 for threejs-plane
 * (done) edit: threejs-plane - embed video2
 
-### () - WED 10/11/2022
+### () - WED 10/12/2022
 * (done) forpost: threejs-object3d-get-world-position - one new loop section example
 * (done) videoground-blog-posts: video1 for threejs-object3d-get-world-position
 * (done) edit: threejs-object3d-get-world-position - embed video
@@ -94,13 +109,13 @@ Other tasks should be limited and only done after I put at least a little time i
 * (done) edit: threejs-object3d-get-world-position - proof read and expand opening
 * (done) edit: threejs-canvas-texture - start new module section based off of what I started with in the basic example
 
-### () - TUE 10/10/2022
+### () - TUE 10/11/2022
 * (done) edit: threejs-examples-sphere-mutate - write about new r1 example
 * (done) videoground-blog-posts: threejs-examples-sphere-mutate video1 on r1 of the example
 * (done) edit: threejs-shape - update code for basic, hole, and group sections
 * (done) edit: threejs-canvas-texture - fixed up basic module example
 
-### () - MON 10/09/2022
+### () - MON 10/10/2022
 * (done) edit: threejs-canvas-texture - new datatex example
 * (done) edit threejs-shape - new paths section
 * (done) edit threejs-shape: new loop section
