--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,7 +43,9 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - SUN 10/16/2022
 <!-- text Plane -->
 * (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
-* () edit: threejs-examples-text-plane - write about r0 example
+* (done) edit: threejs-examples-text-plane - write about r0 example
+
+
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
 <!-- Finish up with canvas texture -->
