--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -40,20 +40,21 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - MON 10/17/2022
 
-### () - SUN 10/16/2022
-<!-- text Plane -->
-* (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
-* (done) edit: threejs-examples-text-plane - write about r0 example
-
-
-* () videoground-blog-posts : threejs-examples-canvas-text-plane
-* () edit: threejs-examples-text-plane - embed video
-<!-- Finish up with canvas texture -->
-* () edit: threejs-canvas-texture - write section on canvasjs r1 and demos
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
 * () forpost: threejs-plane - new attributes section
 * () edit: threejs-plane - write about new attributes section examples
+
+### () - SUN 10/16/2022
+* (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
+* (done) edit: threejs-examples-text-plane - write about r0 example
+* (done) edit: threejs-canvas-texture - write section on canvasjs r1 and demos
+
 * () edit: threejs-plane - write about new loop section
+
+* () videoground-blog-posts : threejs-examples-canvas-text-plane
+* () edit: threejs-examples-text-plane - embed video
+
+
 <!-- misc -->
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 * () videoground: get at least something done with r6
