--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -48,8 +48,7 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
 * (done) edit: threejs-examples-text-plane - write about r0 example
 * (done) edit: threejs-canvas-texture - write section on canvasjs r1 and demos
-
-* () edit: threejs-plane - write about new loop section
+* (done) edit: threejs-plane - write about new loop section
 
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
