--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -53,6 +53,8 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
 
+* () I would like a new revision of seq hooks that will make use of one or more arrays of Vector3 objects to update mesh objects
+* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects
 
 <!-- misc -->
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
