--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -40,21 +40,21 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - MON 10/17/2022
 
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new attributes section
-* () edit: threejs-plane - write about new attributes section examples
+<!-- The prototype for fri -->
+* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
+* () I want to be able to use expressions as a starting point
 
-### () - SUN 10/16/2022
-* (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
-* (done) edit: threejs-examples-text-plane - write about r0 example
-* (done) edit: threejs-canvas-texture - write section on canvasjs r1 and demos
-* (done) edit: threejs-plane - write about new loop section
-
+<!-- threejs-examples-text-plane -->
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
 
-* () I would like a new revision of seq hooks that will make use of one or more arrays of Vector3 objects to update mesh objects
-* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects
+<!-- r2 of threejs-examples-sequence-hooks -->
+* () work on r2 of threejs-examples-sequence-hooks
+* () edit blog post if done
+
+<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
+* () forpost: threejs-plane - new attributes section
+* () edit: threejs-plane - write about new attributes section examples
 
 <!-- misc -->
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
@@ -62,6 +62,12 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () hexo-sitesource: at least have a new static background
 * () build and publish
 
+### () - SUN 10/16/2022
+* (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
+* (done) edit: threejs-examples-text-plane - write about r0 example
+* (done) edit: threejs-canvas-texture - write section on canvasjs r1 and demos
+* (done) edit: threejs-plane - write about new loop section
+* (done) I would like a new revision of seq hooks that will make use of one or more arrays of Vector3 objects to update mesh objects
 
 ## () - WEEK 3 - SUN 10/09/2022 to SAT 10/15/2022
 
