--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -38,7 +38,13 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - TUE 10/18/2022
 
+<!-- threejs-object3d-lookat -->
+* () edit: threejs-object3d-lookat - 
+
 ### () - MON 10/17/2022
+
+<!-- threejs-object3d-lookat -->
+* () edit: threejs-object3d-lookat - proof read opening
 
 <!-- The prototype for fri -->
 * () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
