--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,12 +39,15 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - TUE 10/18/2022
 
 <!-- threejs-object3d-lookat -->
-* () edit: threejs-object3d-lookat - 
+* () edit: threejs-object3d-lookat - proof read what to know fist section
+* () edit: threejs-object3d-lookat - proof read section 1
+* (done) edit: threejs-object3d-lookat - proof read section 2
 
 ### () - MON 10/17/2022
 
 <!-- threejs-object3d-lookat -->
-* () edit: threejs-object3d-lookat - proof read opening
+* (done) edit: threejs-object3d-lookat - proof read opening paragraph
+* () forpost: threejs-object3d-lookat - use let const, default to doc body
 
 <!-- The prototype for fri -->
 * () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
