--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -47,15 +47,16 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 <!-- threejs-object3d-lookat -->
 * (done) edit: threejs-object3d-lookat - proof read opening paragraph
-* () forpost: threejs-object3d-lookat - use let const, default to doc body
-
-<!-- The prototype for fri -->
-* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
-* () I want to be able to use expressions as a starting point
+* (done) forpost: threejs-object3d-lookat - new nested scene object example
+* (done) edit: threejs-object3d-lookat - write about new nested scene object example
 
 <!-- threejs-examples-text-plane -->
 * () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
+
+<!-- The prototype for friday -->
+* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
+* () I want to be able to use expressions as a starting point
 
 <!-- r2 of threejs-examples-sequence-hooks -->
 * () work on r2 of threejs-examples-sequence-hooks
