--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -44,14 +44,14 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit: threejs-object3d-lookat - proof read section 2
 
 ### () - MON 10/17/2022
-
-<!-- threejs-object3d-lookat -->
 * (done) edit: threejs-object3d-lookat - proof read opening paragraph
 * (done) forpost: threejs-object3d-lookat - new nested scene object example
 * (done) edit: threejs-object3d-lookat - write about new nested scene object example
+* (done) videoground-blog-posts: finish template 9
+* (done) videoground-blog-posts: r1 of text cube
+* (done) videoground-blog-posts : threejs-examples-canvas-text-plane - video1 
 
 <!-- threejs-examples-text-plane -->
-* () videoground-blog-posts : threejs-examples-canvas-text-plane
 * () edit: threejs-examples-text-plane - embed video
 
 <!-- The prototype for friday -->
