--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -50,17 +50,15 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) videoground-blog-posts: finish template 9
 * (done) videoground-blog-posts: r1 of text cube
 * (done) videoground-blog-posts : threejs-examples-canvas-text-plane - video1 
-
-<!-- threejs-examples-text-plane -->
-* () edit: threejs-examples-text-plane - embed video
-
-<!-- The prototype for friday -->
-* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
-* () I want to be able to use expressions as a starting point
+* (done) edit: threejs-examples-text-plane - embed video
 
 <!-- r2 of threejs-examples-sequence-hooks -->
 * () work on r2 of threejs-examples-sequence-hooks
 * () edit blog post if done
+
+<!-- The prototype for friday -->
+* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
+* () I want to be able to use expressions as a starting point
 
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
 * () forpost: threejs-plane - new attributes section
