--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -35,25 +35,18 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - THU 10/20/2022
 
 ### () - WED 10/19/2022
+<!-- threejs-object3d-lookat -->
+* () edit: threejs-object3d-lookat - 
 
 ### () - TUE 10/18/2022
+* (done) edit: threejs-object3d-lookat - proof read section 2
 
 <!-- threejs-object3d-lookat -->
 * () edit: threejs-object3d-lookat - proof read what to know fist section
 * () edit: threejs-object3d-lookat - proof read section 1
-* (done) edit: threejs-object3d-lookat - proof read section 2
-
-### () - MON 10/17/2022
-* (done) edit: threejs-object3d-lookat - proof read opening paragraph
-* (done) forpost: threejs-object3d-lookat - new nested scene object example
-* (done) edit: threejs-object3d-lookat - write about new nested scene object example
-* (done) videoground-blog-posts: finish template 9
-* (done) videoground-blog-posts: r1 of text cube
-* (done) videoground-blog-posts : threejs-examples-canvas-text-plane - video1 
-* (done) edit: threejs-examples-text-plane - embed video
 
 <!-- r2 of threejs-examples-sequence-hooks -->
-* () work on r2 of threejs-examples-sequence-hooks
+* () work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
 * () edit blog post if done
 
 <!-- The prototype for friday -->
@@ -69,6 +62,15 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () videoground: get at least something done with r6
 * () hexo-sitesource: at least have a new static background
 * () build and publish
+
+### () - MON 10/17/2022
+* (done) edit: threejs-object3d-lookat - proof read opening paragraph
+* (done) forpost: threejs-object3d-lookat - new nested scene object example
+* (done) edit: threejs-object3d-lookat - write about new nested scene object example
+* (done) videoground-blog-posts: finish template 9
+* (done) videoground-blog-posts: r1 of text cube
+* (done) videoground-blog-posts : threejs-examples-canvas-text-plane - video1 
+* (done) edit: threejs-examples-text-plane - embed video
 
 ### () - SUN 10/16/2022
 * (done) for post: threejs-examples-text-plane - create new r0 example on position attribute
