--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -36,14 +36,13 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - WED 10/19/2022
 <!-- threejs-object3d-lookat -->
-* () edit: threejs-object3d-lookat - 
+* () edit: threejs-object3d-lookat - proof read section 3
+* () edit: threejs-object3d-lookat - proof read conclusion
 
 ### () - TUE 10/18/2022
 * (done) edit: threejs-object3d-lookat - proof read section 2
-
-<!-- threejs-object3d-lookat -->
-* () edit: threejs-object3d-lookat - proof read what to know fist section
-* () edit: threejs-object3d-lookat - proof read section 1
+* (done) edit: threejs-object3d-lookat - proof read what to know fist section
+* (done) edit: threejs-object3d-lookat - proof read section 1
 
 <!-- r2 of threejs-examples-sequence-hooks -->
 * () work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
