--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -30,19 +30,18 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - SAT 10/22/2022
 
 ### () - FRI 10/21/2022
+<!-- The prototype for friday -->
 * () start post #1010 on threejs-examples-
 
 ### () - THU 10/20/2022
+<!-- The prototype for friday -->
+
+<!-- threejs-object3d-lookat -->
 
 ### () - WED 10/19/2022
 <!-- threejs-object3d-lookat -->
 * () edit: threejs-object3d-lookat - proof read section 3
 * () edit: threejs-object3d-lookat - proof read conclusion
-
-### () - TUE 10/18/2022
-* (done) edit: threejs-object3d-lookat - proof read section 2
-* (done) edit: threejs-object3d-lookat - proof read what to know fist section
-* (done) edit: threejs-object3d-lookat - proof read section 1
 
 <!-- r2 of threejs-examples-sequence-hooks -->
 * () work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
@@ -62,6 +61,11 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () videoground: get at least something done with r6
 * () hexo-sitesource: at least have a new static background
 * () build and publish
+
+### () - TUE 10/18/2022
+* (done) edit: threejs-object3d-lookat - proof read section 2
+* (done) edit: threejs-object3d-lookat - proof read what to know fist section
+* (done) edit: threejs-object3d-lookat - proof read section 1
 
 ### () - MON 10/17/2022
 * (done) edit: threejs-object3d-lookat - proof read opening paragraph
