--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -39,9 +39,8 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 <!-- threejs-object3d-lookat -->
 
 ### () - WED 10/19/2022
-<!-- threejs-object3d-lookat -->
-* () edit: threejs-object3d-lookat - proof read section 3
-* () edit: threejs-object3d-lookat - proof read conclusion
+* (done) edit: threejs-object3d-lookat - proof read section 3
+* (done) edit: threejs-object3d-lookat - proof read conclusion
 
 <!-- r2 of threejs-examples-sequence-hooks -->
 * () work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
