--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -43,9 +43,10 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit: threejs-object3d-lookat - proof read conclusion
 
 <!-- r2 of threejs-examples-sequence-hooks -->
-* () work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
+* (done) work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
 * () edit : threejs-examples-sequence-hooks - start new section on r2 
-* () edit : threejs-examples-sequence-hooks - start section on first demo of r2
+* () edit : threejs-examples-sequence-hooks - section on first demo of r2
+* () edit : threejs-examples-sequence-hooks - section on numbers array
 
 <!-- The prototype for friday -->
 * () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
