--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -31,26 +31,30 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - FRI 10/21/2022
 <!-- The prototype for friday -->
-* () start post #1010 on threejs-examples-
+* () start post #1010 on threejs-curve-quadratic-bezier-curve3
 
 ### () - THU 10/20/2022
 <!-- The prototype for friday -->
+* () work on THREE.QuadraticBezierCurve3 prototype folder
+* () start for post folder for threejs-curve-quadratic-bezier-curve3
+
+<!-- threejs-curve -->
+* () forpost: threejs-curve - section on get points method
 
 <!-- threejs-object3d-lookat -->
+* () forpost: see about new example
 
 ### () - WED 10/19/2022
 * (done) edit: threejs-object3d-lookat - proof read section 3
 * (done) edit: threejs-object3d-lookat - proof read conclusion
-
-<!-- r2 of threejs-examples-sequence-hooks -->
 * (done) work on r2 of threejs-examples-sequence-hooks - from numbers feature of v3Array
-* () edit : threejs-examples-sequence-hooks - start new section on r2 
-* () edit : threejs-examples-sequence-hooks - section on first demo of r2
-* () edit : threejs-examples-sequence-hooks - section on numbers array
+* (done) edit : threejs-examples-sequence-hooks - start new section on r2 
+* (done) edit : threejs-examples-sequence-hooks - section on first demo of r2
+* (done) edit : threejs-examples-sequence-hooks - section on numbers array
+* (done) I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
 
 <!-- The prototype for friday -->
-* () I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
-* () I want to be able to use expressions as a starting point
+* () start a new prototype for THREE.QuadraticBezierCurve3 which will be my back up plane blog post for this week
 
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
 * () forpost: threejs-plane - new attributes section
