--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -35,7 +35,7 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - THU 10/20/2022
 <!-- The prototype for friday -->
-* () work on THREE.QuadraticBezierCurve3 prototype folder
+* () work on THREE.QuadraticBezierCurve3 proto folders
 * () start for post folder for threejs-curve-quadratic-bezier-curve3
 
 <!-- threejs-curve -->
@@ -52,9 +52,7 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit : threejs-examples-sequence-hooks - section on first demo of r2
 * (done) edit : threejs-examples-sequence-hooks - section on numbers array
 * (done) I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
-
-<!-- The prototype for friday -->
-* () start a new prototype for THREE.QuadraticBezierCurve3 which will be my back up plane blog post for this week
+* (done) start a new prototype for THREE.QuadraticBezierCurve3 which will be my back up plane blog post for this week
 
 <!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
 * () forpost: threejs-plane - new attributes section
