--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -34,6 +34,10 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () start post #1010 on threejs-curve-quadratic-bezier-curve3
 
 ### () - THU 10/20/2022
+<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
+* () forpost: threejs-plane - new attributes section starting with position
+* () edit: threejs-plane - write about new attributes section
+
 <!-- The prototype for friday -->
 * () work on THREE.QuadraticBezierCurve3 proto folders
 * () start for post folder for threejs-curve-quadratic-bezier-curve3
@@ -44,6 +48,12 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 <!-- threejs-object3d-lookat -->
 * () forpost: see about new example
 
+<!-- misc -->
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+
 ### () - WED 10/19/2022
 * (done) edit: threejs-object3d-lookat - proof read section 3
 * (done) edit: threejs-object3d-lookat - proof read conclusion
@@ -53,16 +63,6 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit : threejs-examples-sequence-hooks - section on numbers array
 * (done) I would like to start a new prototype that has to do with creating these arrays of Vector3 objects to use with r2 of seghooks
 * (done) start a new prototype for THREE.QuadraticBezierCurve3 which will be my back up plane blog post for this week
-
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new attributes section
-* () edit: threejs-plane - write about new attributes section examples
-
-<!-- misc -->
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
-* () hexo-sitesource: at least have a new static background
-* () build and publish
 
 ### () - TUE 10/18/2022
 * (done) edit: threejs-object3d-lookat - proof read section 2
