--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -30,13 +30,16 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - SAT 10/22/2022
 
 ### () - FRI 10/21/2022
+<!-- threejs-plane -->
+* () forpost: threejs-plane - new example for the attributes section
+* () edit: threejs-plane - write about new attributes example
+
 <!-- The prototype for friday -->
 * () start post #1010 on threejs-curve-quadratic-bezier-curve3
 
 ### () - THU 10/20/2022
-<!-- PLANE GEO POST CAN BE EXPANDED A LOT WITH EVERYTHING I KNOW NOW -->
-* () forpost: threejs-plane - new attributes section starting with position
-* () edit: threejs-plane - write about new attributes section
+* (done) forpost: threejs-plane - new attributes section starting with position
+* (done) edit: threejs-plane - write about new attributes section
 
 <!-- The prototype for friday -->
 * () work on THREE.QuadraticBezierCurve3 proto folders
