--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -30,19 +30,17 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - SAT 10/22/2022
 
 ### () - FRI 10/21/2022
+<!-- The prototype for friday -->
+* () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
+* () start post #1010 on threejs-curve-quadratic-bezier-curve3
 <!-- threejs-plane -->
 * () forpost: threejs-plane - new example for the attributes section
 * () edit: threejs-plane - write about new attributes example
 
-<!-- The prototype for friday -->
-* () start post #1010 on threejs-curve-quadratic-bezier-curve3
-
 ### () - THU 10/20/2022
 * (done) forpost: threejs-plane - new attributes section starting with position
 * (done) edit: threejs-plane - write about new attributes section
-<!-- The prototype for friday -->
-* () work on THREE.QuadraticBezierCurve3 proto folders
-* () start for post folder for threejs-curve-quadratic-bezier-curve3
+* (done) start for post folder for threejs-curve-quadratic-bezier-curve3
 <!-- threejs-curve -->
 * () forpost: threejs-curve - section on get points method
 <!-- threejs-object3d-lookat -->
