--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -42,7 +42,8 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) edit: threejs-plane - write about new attributes section
 * (done) start for post folder for threejs-curve-quadratic-bezier-curve3
 <!-- threejs-curve -->
-* () forpost: threejs-curve - section on get points method
+* (done) forpost: threejs-curve - expand basic section
+* () edit: threejs-curve - write about new basic section
 <!-- threejs-object3d-lookat -->
 * () forpost: see about new example
 <!-- misc -->
