--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -33,6 +33,15 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 <!-- The prototype for friday -->
 * () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 * () start post #1010 on threejs-curve-quadratic-bezier-curve3
+<!-- threejs-curve -->
+* () edit: threejs-curve - write about new basic section
+<!-- threejs-object3d-lookat -->
+* () forpost: see about new example
+<!-- misc -->
+* () hexo-sitesource: at least have a new static background
+* () build and publish
+* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
+* () videoground: get at least something done with r6
 <!-- threejs-plane -->
 * () forpost: threejs-plane - new example for the attributes section
 * () edit: threejs-plane - write about new attributes example
@@ -43,14 +52,6 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) start for post folder for threejs-curve-quadratic-bezier-curve3
 <!-- threejs-curve -->
 * (done) forpost: threejs-curve - expand basic section
-* () edit: threejs-curve - write about new basic section
-<!-- threejs-object3d-lookat -->
-* () forpost: see about new example
-<!-- misc -->
-* () hexo-sitesource: at least have a new static background
-* () build and publish
-* () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
-* () videoground: get at least something done with r6
 
 ### () - WED 10/19/2022
 * (done) edit: threejs-object3d-lookat - proof read section 3
