--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -31,12 +31,11 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 
 ### () - FRI 10/21/2022
 * (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
+* (done) edit: threejs-curve - write about new basic section
 <!-- The prototype for friday -->
 * () forpost: threejs-curve-quadratic-bezier-curve3 - one addtional basic example
 * () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 * () edit: threejs-curve-quadratic-bezier-curve3 - write about new examples
-<!-- threejs-curve -->
-* () edit: threejs-curve - write about new basic section
 <!-- threejs-object3d-lookat -->
 * () forpost: see about new example
 <!-- misc -->
