--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -32,12 +32,13 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 ### () - FRI 10/21/2022
 * (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
 * (done) edit: threejs-curve - write about new basic section
+* (done) forpost: new animaiton loop example
+* (done) edit: write about new animaiton example
+
 <!-- The prototype for friday -->
 * () forpost: threejs-curve-quadratic-bezier-curve3 - one addtional basic example
 * () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 * () edit: threejs-curve-quadratic-bezier-curve3 - write about new examples
-<!-- threejs-object3d-lookat -->
-* () forpost: see about new example
 <!-- misc -->
 * () hexo-sitesource: at least have a new static background
 * () build and publish
