--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -28,15 +28,8 @@ TOPTEN: This week the top 10 post to look at is the one on the object3d look at 
 NEWPOST: This week I would like to work on an idea for making a system for creating VEctor3 data to use with an improved seqhooks mod
 
 ### () - SAT 10/22/2022
-
-### () - FRI 10/21/2022
-* (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
-* (done) edit: threejs-curve - write about new basic section
-* (done) forpost: new animaiton loop example
-* (done) edit: write about new animaiton example
-
-<!-- The prototype for friday -->
-* () forpost: threejs-curve-quadratic-bezier-curve3 - one addtional basic example
+<!-- threejs-curve-quadratic-bezier-curve3 -->
+* () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
 * () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
 * () edit: threejs-curve-quadratic-bezier-curve3 - write about new examples
 <!-- misc -->
@@ -47,6 +40,12 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 <!-- threejs-plane -->
 * () forpost: threejs-plane - new example for the attributes section
 * () edit: threejs-plane - write about new attributes example
+
+### () - FRI 10/21/2022
+* (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
+* (done) edit: threejs-curve - write about new basic section
+* (done) forpost: new animaiton loop example
+* (done) edit: write about new animaiton example
 
 ### () - THU 10/20/2022
 * (done) forpost: threejs-plane - new attributes section starting with position
