--- a/todo/today/todo_2022_10.md
+++ b/todo/today/todo_2022_10.md
@@ -28,6 +28,8 @@ TOPTEN: This week the top 10 post to look at is the one on the object3d look at 
 NEWPOST: This week I would like to work on an idea for making a system for creating VEctor3 data to use with an improved seqhooks mod
 
 ### () - SAT 10/22/2022
+* (done) forpost: threejs-plane - new example for the attributes section
+* (done) edit: threejs-plane - write about new attributes example
 <!-- threejs-curve-quadratic-bezier-curve3 -->
 * () forpost: threejs-curve-quadratic-bezier-curve3 - one additional basic example
 * () forpost: threejs-curve-quadratic-bezier-curve3 - at least one loop example
@@ -37,9 +39,6 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * () build and publish
 * () threejs-examples-animation-loop-module: example using lines-deterministic threejs example
 * () videoground: get at least something done with r6
-<!-- threejs-plane -->
-* () forpost: threejs-plane - new example for the attributes section
-* () edit: threejs-plane - write about new attributes example
 
 ### () - FRI 10/21/2022
 * (done) start post #1010 on threejs-curve-quadratic-bezier-curve3
@@ -51,7 +50,6 @@ NEWPOST: This week I would like to work on an idea for making a system for creat
 * (done) forpost: threejs-plane - new attributes section starting with position
 * (done) edit: threejs-plane - write about new attributes section
 * (done) start for post folder for threejs-curve-quadratic-bezier-curve3
-<!-- threejs-curve -->
 * (done) forpost: threejs-curve - expand basic section
 
 ### () - WED 10/19/2022
